# target-lexicon

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/actions/install-rust/: action.yml
.github/workflows/: main.yml
examples/: host.rs  misc.rs
src/: data_model.rs  default_to_host.rs  host.rs  lib.rs  targets.rs  triple.rs
