[package]
name = "target-lexicon"
version = "0.11.0"
authors = ["Dan Gohman <sunfish@mozilla.com>"]
description = "Targeting utilities for compilers and related tools"
documentation = "https://docs.rs/target-lexicon/"
readme = "README.md"
keywords = ["target", "host", "triple", "compiler", "jit"]
categories = ["no-std"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/CraneStation/target-lexicon"
edition = "2018"

[features]
default = []
std = []

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "CraneStation/target-lexicon" }
