[package]
name = "target-lexicon"
version = "0.12.7"
authors = ["Dan Gohman <sunfish@mozilla.com>"]
description = "Targeting utilities for compilers and related tools"
documentation = "https://docs.rs/target-lexicon/"
readme = "README.md"
keywords = ["target", "host", "triple", "compiler", "jit"]
categories = ["no-std"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/target-lexicon"
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }

strum_macros = "0.24.3"
strum = { version = "0.24.1", default-features = false }

[build-dependencies]
strum_macros = "0.24.3"
strum = { version = "0.24.1", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde_support = ["serde", "std"]
std = []

[badges]
maintenance = { status = "passively-maintained" }
